<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Barrel Race</string>
    <string name="action_settings">Settings</string>
    <string name="newgame">NEW GAME</string>
    <string name="highscore">HIGH SCORE</string>
    <string name="rules">RULES</string>
    <string name="credits">CREDITS</string>
    <string name="exit">EXIT GAME</string>
    <string name="title_activity_new_game">New Game</string>
    <string name="title_activity_high_score">HighScore</string>
    <string name="title_activity_rules">Rules</string>
    <string name="title_activity_about">About</string>

</resources>
